gdk-pixbuf/gdk-pixbuf-private.h
@@ -29,7 +29,7 @@
 #include <math.h>
 
 #include <glib-object.h>
-#include <glib/gi18n.h>
+#include <glib/gi18n-lib.h>
 
 #include "gdk-pixbuf-core.h"
 #include "gdk-pixbuf-loader.h"
